--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "firebase": "^3.5.0",
+    "mongoose": "^4.6.4",
     "nconf": "^0.8.4",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "passport-vkontakte": "^0.3.2",
     "simple-oauth2": "^1.0.0",
     "webpack": "^1.13.2"
   },
