--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "co": "^4.6.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "htmlparser2": "^3.9.2",
+    "iconv-lite": "^0.4.13",
     "mongoose": "^4.6.4",
     "nconf": "^0.8.4",
     "passport": "^0.3.2",
@@ -26,6 +29,7 @@
     "passport-google-oauth20": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "passport-vkontakte": "^0.3.2",
+    "utf8": "^2.1.2",
     "webpack": "^1.13.2"
   },
   "devDependencies": {},
