--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "port": 5000,
   "mongoose": {
-    "uri": "mongodb://ds033607.mlab.com:33607/heroku_hh1xb2dv"
+    "uri": "mongodb://app:apppassword@ds033607.mlab.com:33607/heroku_hh1xb2dv"
   },
   "oauth": {
     "facebook": {
