--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "bootstrap-social": "^5.0.0",
     "co": "^4.6.0",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "font-awesome": "^4.7.0",
     "htmlparser2": "^3.9.2",
     "iconv-lite": "^0.4.13",
+    "jquery": "^3.1.1",
     "mongoose": "^4.6.4",
     "nconf": "^0.8.4",
     "passport": "^0.3.2",
